# Conway-s-Game-of-Life-

./: .gitignore  Background.cpp  Button.cpp  CMakeLists.txt  Cell.cpp  GameOfLife.cpp  Main.cpp  Map.cpp  README.md  Title.cpp
.github/workflows/: ci.yml  static-analysis.yml  test.yml
headers/: Background.h  Button.h  Cell.h  Game.h  GameConstants.h  GameOfLife.h  Map.h  Menu.h
source/: Background.cpp  Button.cpp  Cell.cpp  GameOfLife.cpp  Main.cpp  Map.cpp  Title.cpp  sfml-app
source/headers/: Background.h  Button.h  Cell.h  GameConstants.h  GameOfLife.h  Map.h  Title.h
src/: Background.cpp  Button.cpp  Cell.cpp  GameOfLife.cpp  Label.cpp  Map.cpp  ResourceManager.cpp  Title.cpp
src/headers/: Background.h  Button.h  Cell.h  Colors.h  Fonts.h  GameConstants.h  GameOfLife.h  Label.h  Logger.h  Map.h  Random.h  ResourceManager.h  Textures.h  Title.h
test/: ButtonTest.cpp  CMakeCache.txt  CMakeLists.txt  CellTest.cpp  MapTest.cpp  Test.cpp
